@@ -14,7 +14,7 @@ script.on_init(function()
     global.delayed_chat_messages = {}
     global.forces = {}
     global.players = {}
-
+    global.milestones_check_frequency_setting = settings.global["milestones_check_frequency"].value
 
     initial_preset_string = settings.global["milestones_initial_preset"].value
     if initial_preset_string ~= "" then
@@ -87,14 +87,10 @@ script.on_event(defines.events.on_player_removed, function(event)
     clear_player(event.player_index)
 end)
 
-script.on_nth_tick(settings.global["milestones_check_frequency"].value, track_item_creation)
-
 script.on_event(defines.events.on_runtime_mod_setting_changed, function(event)
     local setting_name = event.setting
     if setting_name == "milestones_check_frequency" then
-        log("Milestones check frequency changed")
-        script.on_nth_tick(nil) -- Unregister event
-        script.on_nth_tick(settings.global["milestones_check_frequency"].value, track_item_creation)
+        global.milestones_check_frequency_setting = settings.global["milestones_check_frequency"].value
     elseif setting_name == "milestones_compact_list" or setting_name == "milestones_list_by_group" or setting_name == "milestones_show_estimations" then
         refresh_gui_for_player(game.get_player(event.player_index))
     end
